Auth Additions for UI, New Auth REST APIs
